tapl/ocaml/fullsimple/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term
   4          | UCID TyBinder
   5          | LCID Binder

   6  Binder : COLON Type
   7         | EQ Term

   8  Type : ArrowType

   9  AType : LPAREN Type RPAREN
  10        | UCID
  11        | BOOL
  12        | LT FieldTypes GT
  13        | USTRING
  14        | UUNIT
  15        | LCURLY FieldTypes RCURLY
  16        | UFLOAT
  17        | NAT

  18  TyBinder :
  19           | EQ Type

  20  FieldTypes :
  21             | NEFieldTypes

  22  NEFieldTypes : FieldType
  23               | FieldType COMMA NEFieldTypes

  24  FieldType : LCID COLON Type
  25            | Type

  26  ArrowType : AType ARROW ArrowType
  27            | AType

  28  Term : AppTerm
  29       | IF Term THEN Term ELSE Term
  30       | CASE Term OF Cases
  31       | LAMBDA LCID COLON Type DOT Term
  32       | LAMBDA USCORE COLON Type DOT Term
  33       | LET LCID EQ Term IN Term
  34       | LET USCORE EQ Term IN Term
  35       | LETREC LCID COLON Type EQ Term IN Term

  36  AppTerm : PathTerm
  37          | AppTerm PathTerm
  38          | FIX PathTerm
  39          | TIMESFLOAT PathTerm PathTerm
  40          | SUCC PathTerm
  41          | PRED PathTerm
  42          | ISZERO PathTerm

  43  AscribeTerm : ATerm AS Type
  44              | ATerm

  45  PathTerm : PathTerm DOT LCID
  46           | PathTerm DOT INTV
  47           | AscribeTerm

  48  TermSeq : Term
  49          | Term SEMI TermSeq

  50  ATerm : LPAREN TermSeq RPAREN
  51        | INERT LSQUARE Type RSQUARE
  52        | TRUE
  53        | FALSE
  54        | LT LCID EQ Term GT AS Type
  55        | LCID
  56        | STRINGV
  57        | UNIT
  58        | LCURLY Fields RCURLY
  59        | FLOATV
  60        | INTV

  61  Cases : Case
  62        | Case VBAR Cases

  63  Case : LT LCID EQ LCID GT DDARROW AppTerm

  64  Fields :
  65         | NEFields

  66  NEFields : Field
  67           | Field COMMA NEFields

  68  Field : LCID EQ Term
  69        | Term

  70  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (70)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	UCID  shift 17
	LCID  shift 18
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	EOF  shift 22
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	toplevel  goto 26
	Command  goto 27
	Term  goto 28
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	ATerm : INERT . LSQUARE Type RSQUARE  (51)

	LSQUARE  shift 33
	.  error


state 4
	Term : IF . Term THEN Term ELSE Term  (29)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 35
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 5
	ATerm : TRUE .  (52)

	.  reduce 52


state 6
	ATerm : FALSE .  (53)

	.  reduce 53


state 7
	Term : CASE . Term OF Cases  (30)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 36
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 8
	Term : LAMBDA . LCID COLON Type DOT Term  (31)
	Term : LAMBDA . USCORE COLON Type DOT Term  (32)

	LCID  shift 37
	USCORE  shift 38
	.  error


state 9
	Term : LET . LCID EQ Term IN Term  (33)
	Term : LET . USCORE EQ Term IN Term  (34)

	LCID  shift 39
	USCORE  shift 40
	.  error


state 10
	AppTerm : FIX . PathTerm  (38)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	PathTerm  goto 41
	AscribeTerm  goto 31
	ATerm  goto 32


state 11
	Term : LETREC . LCID COLON Type EQ Term IN Term  (35)

	LCID  shift 42
	.  error


state 12
	ATerm : UNIT .  (57)

	.  reduce 57


state 13
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (39)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	PathTerm  goto 43
	AscribeTerm  goto 31
	ATerm  goto 32


state 14
	AppTerm : SUCC . PathTerm  (40)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	PathTerm  goto 44
	AscribeTerm  goto 31
	ATerm  goto 32


state 15
	AppTerm : PRED . PathTerm  (41)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	PathTerm  goto 45
	AscribeTerm  goto 31
	ATerm  goto 32


state 16
	AppTerm : ISZERO . PathTerm  (42)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	PathTerm  goto 46
	AscribeTerm  goto 31
	ATerm  goto 32


state 17
	Command : UCID . TyBinder  (4)
	TyBinder : .  (18)

	EQ  shift 47
	SEMI  reduce 18

	TyBinder  goto 48


state 18
	Command : LCID . Binder  (5)
	ATerm : LCID .  (55)

	COLON  shift 49
	EQ  shift 50
	INERT  reduce 55
	TRUE  reduce 55
	FALSE  reduce 55
	AS  reduce 55
	UNIT  reduce 55
	LCID  reduce 55
	INTV  reduce 55
	FLOATV  reduce 55
	STRINGV  reduce 55
	DOT  reduce 55
	LCURLY  reduce 55
	LPAREN  reduce 55
	LT  reduce 55
	SEMI  reduce 55

	Binder  goto 51


state 19
	ATerm : INTV .  (60)

	.  reduce 60


state 20
	ATerm : FLOATV .  (59)

	.  reduce 59


state 21
	ATerm : STRINGV .  (56)

	.  reduce 56


state 22
	toplevel : EOF .  (1)

	.  reduce 1


state 23
	ATerm : LCURLY . Fields RCURLY  (58)
	Fields : .  (64)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 52
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	RCURLY  reduce 64

	Term  goto 53
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32
	Fields  goto 54
	NEFields  goto 55
	Field  goto 56


state 24
	ATerm : LPAREN . TermSeq RPAREN  (50)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 57
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32
	TermSeq  goto 58


state 25
	ATerm : LT . LCID EQ Term GT AS Type  (54)

	LCID  shift 59
	.  error


state 26
	%entry% : '\001' toplevel .  (70)

	.  reduce 70


state 27
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 60
	.  error


state 28
	Command : Term .  (3)

	.  reduce 3


state 29
	Term : AppTerm .  (28)
	AppTerm : AppTerm . PathTerm  (37)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	THEN  reduce 28
	ELSE  reduce 28
	OF  reduce 28
	IN  reduce 28
	COMMA  reduce 28
	GT  reduce 28
	RCURLY  reduce 28
	RPAREN  reduce 28
	SEMI  reduce 28

	PathTerm  goto 61
	AscribeTerm  goto 31
	ATerm  goto 32


state 30
	AppTerm : PathTerm .  (36)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	TRUE  reduce 36
	FALSE  reduce 36
	OF  reduce 36
	IN  reduce 36
	UNIT  reduce 36
	LCID  reduce 36
	INTV  reduce 36
	FLOATV  reduce 36
	STRINGV  reduce 36
	COMMA  reduce 36
	GT  reduce 36
	LCURLY  reduce 36
	LPAREN  reduce 36
	LT  reduce 36
	RCURLY  reduce 36
	RPAREN  reduce 36
	SEMI  reduce 36
	VBAR  reduce 36


state 31
	PathTerm : AscribeTerm .  (47)

	.  reduce 47


state 32
	AscribeTerm : ATerm . AS Type  (43)
	AscribeTerm : ATerm .  (44)

	AS  shift 63
	INERT  reduce 44
	THEN  reduce 44
	ELSE  reduce 44
	TRUE  reduce 44
	FALSE  reduce 44
	OF  reduce 44
	IN  reduce 44
	UNIT  reduce 44
	LCID  reduce 44
	INTV  reduce 44
	FLOATV  reduce 44
	STRINGV  reduce 44
	COMMA  reduce 44
	DOT  reduce 44
	GT  reduce 44
	LCURLY  reduce 44
	LPAREN  reduce 44
	LT  reduce 44
	RCURLY  reduce 44
	RPAREN  reduce 44
	SEMI  reduce 44
	VBAR  reduce 44


state 33
	ATerm : INERT LSQUARE . Type RSQUARE  (51)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 73
	ArrowType  goto 74
	AType  goto 75


state 34
	ATerm : LCID .  (55)

	.  reduce 55


state 35
	Term : IF Term . THEN Term ELSE Term  (29)

	THEN  shift 76
	.  error


state 36
	Term : CASE Term . OF Cases  (30)

	OF  shift 77
	.  error


state 37
	Term : LAMBDA LCID . COLON Type DOT Term  (31)

	COLON  shift 78
	.  error


state 38
	Term : LAMBDA USCORE . COLON Type DOT Term  (32)

	COLON  shift 79
	.  error


state 39
	Term : LET LCID . EQ Term IN Term  (33)

	EQ  shift 80
	.  error


state 40
	Term : LET USCORE . EQ Term IN Term  (34)

	EQ  shift 81
	.  error


state 41
	AppTerm : FIX PathTerm .  (38)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	TRUE  reduce 38
	FALSE  reduce 38
	OF  reduce 38
	IN  reduce 38
	UNIT  reduce 38
	LCID  reduce 38
	INTV  reduce 38
	FLOATV  reduce 38
	STRINGV  reduce 38
	COMMA  reduce 38
	GT  reduce 38
	LCURLY  reduce 38
	LPAREN  reduce 38
	LT  reduce 38
	RCURLY  reduce 38
	RPAREN  reduce 38
	SEMI  reduce 38
	VBAR  reduce 38


state 42
	Term : LETREC LCID . COLON Type EQ Term IN Term  (35)

	COLON  shift 82
	.  error


state 43
	AppTerm : TIMESFLOAT PathTerm . PathTerm  (39)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	INERT  shift 3
	TRUE  shift 5
	FALSE  shift 6
	UNIT  shift 12
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	DOT  shift 62
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	PathTerm  goto 83
	AscribeTerm  goto 31
	ATerm  goto 32


state 44
	AppTerm : SUCC PathTerm .  (40)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 40
	THEN  reduce 40
	ELSE  reduce 40
	TRUE  reduce 40
	FALSE  reduce 40
	OF  reduce 40
	IN  reduce 40
	UNIT  reduce 40
	LCID  reduce 40
	INTV  reduce 40
	FLOATV  reduce 40
	STRINGV  reduce 40
	COMMA  reduce 40
	GT  reduce 40
	LCURLY  reduce 40
	LPAREN  reduce 40
	LT  reduce 40
	RCURLY  reduce 40
	RPAREN  reduce 40
	SEMI  reduce 40
	VBAR  reduce 40


state 45
	AppTerm : PRED PathTerm .  (41)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 41
	THEN  reduce 41
	ELSE  reduce 41
	TRUE  reduce 41
	FALSE  reduce 41
	OF  reduce 41
	IN  reduce 41
	UNIT  reduce 41
	LCID  reduce 41
	INTV  reduce 41
	FLOATV  reduce 41
	STRINGV  reduce 41
	COMMA  reduce 41
	GT  reduce 41
	LCURLY  reduce 41
	LPAREN  reduce 41
	LT  reduce 41
	RCURLY  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	VBAR  reduce 41


state 46
	AppTerm : ISZERO PathTerm .  (42)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 42
	THEN  reduce 42
	ELSE  reduce 42
	TRUE  reduce 42
	FALSE  reduce 42
	OF  reduce 42
	IN  reduce 42
	UNIT  reduce 42
	LCID  reduce 42
	INTV  reduce 42
	FLOATV  reduce 42
	STRINGV  reduce 42
	COMMA  reduce 42
	GT  reduce 42
	LCURLY  reduce 42
	LPAREN  reduce 42
	LT  reduce 42
	RCURLY  reduce 42
	RPAREN  reduce 42
	SEMI  reduce 42
	VBAR  reduce 42


state 47
	TyBinder : EQ . Type  (19)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 84
	ArrowType  goto 74
	AType  goto 75


state 48
	Command : UCID TyBinder .  (4)

	.  reduce 4


state 49
	Binder : COLON . Type  (6)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 85
	ArrowType  goto 74
	AType  goto 75


state 50
	Binder : EQ . Term  (7)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 86
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 51
	Command : LCID Binder .  (5)

	.  reduce 5


state 52
	ATerm : LCID .  (55)
	Field : LCID . EQ Term  (68)

	EQ  shift 87
	INERT  reduce 55
	TRUE  reduce 55
	FALSE  reduce 55
	AS  reduce 55
	UNIT  reduce 55
	LCID  reduce 55
	INTV  reduce 55
	FLOATV  reduce 55
	STRINGV  reduce 55
	COMMA  reduce 55
	DOT  reduce 55
	LCURLY  reduce 55
	LPAREN  reduce 55
	LT  reduce 55
	RCURLY  reduce 55


state 53
	Field : Term .  (69)

	.  reduce 69


state 54
	ATerm : LCURLY Fields . RCURLY  (58)

	RCURLY  shift 88
	.  error


state 55
	Fields : NEFields .  (65)

	.  reduce 65


state 56
	NEFields : Field .  (66)
	NEFields : Field . COMMA NEFields  (67)

	COMMA  shift 89
	RCURLY  reduce 66


state 57
	TermSeq : Term .  (48)
	TermSeq : Term . SEMI TermSeq  (49)

	SEMI  shift 90
	RPAREN  reduce 48


state 58
	ATerm : LPAREN TermSeq . RPAREN  (50)

	RPAREN  shift 91
	.  error


state 59
	ATerm : LT LCID . EQ Term GT AS Type  (54)

	EQ  shift 92
	.  error


state 60
	toplevel : Command SEMI . toplevel  (2)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	UCID  shift 17
	LCID  shift 18
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	EOF  shift 22
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	toplevel  goto 93
	Command  goto 27
	Term  goto 28
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 61
	AppTerm : AppTerm PathTerm .  (37)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	TRUE  reduce 37
	FALSE  reduce 37
	OF  reduce 37
	IN  reduce 37
	UNIT  reduce 37
	LCID  reduce 37
	INTV  reduce 37
	FLOATV  reduce 37
	STRINGV  reduce 37
	COMMA  reduce 37
	GT  reduce 37
	LCURLY  reduce 37
	LPAREN  reduce 37
	LT  reduce 37
	RCURLY  reduce 37
	RPAREN  reduce 37
	SEMI  reduce 37
	VBAR  reduce 37


state 62
	PathTerm : PathTerm DOT . LCID  (45)
	PathTerm : PathTerm DOT . INTV  (46)

	LCID  shift 94
	INTV  shift 95
	.  error


state 63
	AscribeTerm : ATerm AS . Type  (43)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 96
	ArrowType  goto 74
	AType  goto 75


state 64
	AType : BOOL .  (11)

	.  reduce 11


state 65
	AType : USTRING .  (13)

	.  reduce 13


state 66
	AType : UUNIT .  (14)

	.  reduce 14


state 67
	AType : UFLOAT .  (16)

	.  reduce 16


state 68
	AType : NAT .  (17)

	.  reduce 17


state 69
	AType : UCID .  (10)

	.  reduce 10


state 70
	AType : LCURLY . FieldTypes RCURLY  (15)
	FieldTypes : .  (20)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCID  shift 97
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	RCURLY  reduce 20

	Type  goto 98
	ArrowType  goto 74
	AType  goto 75
	FieldTypes  goto 99
	NEFieldTypes  goto 100
	FieldType  goto 101


state 71
	AType : LPAREN . Type RPAREN  (9)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 102
	ArrowType  goto 74
	AType  goto 75


state 72
	AType : LT . FieldTypes GT  (12)
	FieldTypes : .  (20)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCID  shift 97
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	GT  reduce 20

	Type  goto 98
	ArrowType  goto 74
	AType  goto 75
	FieldTypes  goto 103
	NEFieldTypes  goto 100
	FieldType  goto 101


state 73
	ATerm : INERT LSQUARE Type . RSQUARE  (51)

	RSQUARE  shift 104
	.  error


state 74
	Type : ArrowType .  (8)

	.  reduce 8


state 75
	ArrowType : AType . ARROW ArrowType  (26)
	ArrowType : AType .  (27)

	ARROW  shift 105
	INERT  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	TRUE  reduce 27
	FALSE  reduce 27
	OF  reduce 27
	AS  reduce 27
	IN  reduce 27
	UNIT  reduce 27
	LCID  reduce 27
	INTV  reduce 27
	FLOATV  reduce 27
	STRINGV  reduce 27
	COMMA  reduce 27
	DOT  reduce 27
	EQ  reduce 27
	GT  reduce 27
	LCURLY  reduce 27
	LPAREN  reduce 27
	LT  reduce 27
	RCURLY  reduce 27
	RPAREN  reduce 27
	RSQUARE  reduce 27
	SEMI  reduce 27
	VBAR  reduce 27


state 76
	Term : IF Term THEN . Term ELSE Term  (29)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 106
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 77
	Term : CASE Term OF . Cases  (30)

	LT  shift 107
	.  error

	Cases  goto 108
	Case  goto 109


state 78
	Term : LAMBDA LCID COLON . Type DOT Term  (31)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 110
	ArrowType  goto 74
	AType  goto 75


state 79
	Term : LAMBDA USCORE COLON . Type DOT Term  (32)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 111
	ArrowType  goto 74
	AType  goto 75


state 80
	Term : LET LCID EQ . Term IN Term  (33)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 112
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 81
	Term : LET USCORE EQ . Term IN Term  (34)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 113
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 82
	Term : LETREC LCID COLON . Type EQ Term IN Term  (35)

	BOOL  shift 64
	USTRING  shift 65
	UUNIT  shift 66
	UFLOAT  shift 67
	NAT  shift 68
	UCID  shift 69
	LCURLY  shift 70
	LPAREN  shift 71
	LT  shift 72
	.  error

	Type  goto 114
	ArrowType  goto 74
	AType  goto 75


state 83
	AppTerm : TIMESFLOAT PathTerm PathTerm .  (39)
	PathTerm : PathTerm . DOT LCID  (45)
	PathTerm : PathTerm . DOT INTV  (46)

	DOT  shift 62
	INERT  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	TRUE  reduce 39
	FALSE  reduce 39
	OF  reduce 39
	IN  reduce 39
	UNIT  reduce 39
	LCID  reduce 39
	INTV  reduce 39
	FLOATV  reduce 39
	STRINGV  reduce 39
	COMMA  reduce 39
	GT  reduce 39
	LCURLY  reduce 39
	LPAREN  reduce 39
	LT  reduce 39
	RCURLY  reduce 39
	RPAREN  reduce 39
	SEMI  reduce 39
	VBAR  reduce 39


state 84
	TyBinder : EQ Type .  (19)

	.  reduce 19


state 85
	Binder : COLON Type .  (6)

	.  reduce 6


state 86
	Binder : EQ Term .  (7)

	.  reduce 7


state 87
	Field : LCID EQ . Term  (68)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 115
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 88
	ATerm : LCURLY Fields RCURLY .  (58)

	.  reduce 58


state 89
	NEFields : Field COMMA . NEFields  (67)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 52
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 53
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32
	NEFields  goto 116
	Field  goto 56


state 90
	TermSeq : Term SEMI . TermSeq  (49)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 57
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32
	TermSeq  goto 117


state 91
	ATerm : LPAREN TermSeq RPAREN .  (50)

	.  reduce 50


state 92
	ATerm : LT LCID EQ . Term GT AS Type  (54)

	INERT  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	CASE  shift 7
	LAMBDA  shift 8
	LET  shift 9
	FIX  shift 10
	LETREC  shift 11
	UNIT  shift 12
	TIMESFLOAT  shift 13
	SUCC  shift 14
	PRED  shift 15
	ISZERO  shift 16
	LCID  shift 34
	INTV  shift 19
	FLOATV  shift 20
	STRINGV  shift 21
	LCURLY  shift 23
	LPAREN  shift 24
	LT  shift 25
	.  error

	Term  goto 118
	AppTerm  goto 29
	PathTerm  goto 30
	AscribeTerm  goto 31
	ATerm  goto 32


state 93
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 94
	PathTerm : PathTerm DOT LCID .  (45)

	.  reduce 45


state 95
	PathTerm : PathTerm DOT INTV .  (46)

	.  reduce 46


state 96
	AscribeTerm : ATerm AS Type .  (43)

	.  reduce 43


state 97
	FieldType : LCID . COLON Type  (24)

	COLON  shift 119
	.  error


state 98
	FieldType : Type .  (25)

	.  reduce 25


state 99
	AType : LCURLY FieldTypes . RCURLY  (15)

	RCURLY  shift 120
	.  error

